<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="internet_label">Internet Access</string>
    <string name="internet_description">This app requires access to the internet to stream live data</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="location">Location Preferences</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="city_summary">City in which you want weather info</string>
    <string name="city_default_value">Moncton</string>
    <string name="country_summary">Country for the city in which you want weather info</string>
    <string name="country_default_value">CA</string>
    <string name="units_category">Units</string>
    <string name="units">Units</string>
    <string name="select_unit">Select the unit of measurement for the weather</string>
    <string name="unit_default_value">metric</string>
    <string name="city_key" translatable="false">city</string>
    <string name="country_key">country</string>
    <string name="unit_key">unit</string>
    <string name="action_view_location">View Location</string>
    <string name="share">Share</string>

</resources>
