<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:key="button_location_category_key"
        android:title="@string/location"
        android:persistent="false">
        <EditTextPreference android:key="@string/city_key"
            android:title="@string/city"
            android:summary="@string/city_summary"
            android:inputType="text"
            android:singleLine="true"
            android:defaultValue="@string/city_default_value"/>
        <EditTextPreference android:key="@string/country_key"
            android:title="@string/country"
            android:inputType="text"
            android:singleLine="true"
            android:summary="@string/country_summary"
            android:defaultValue="@string/country_default_value"/>
    </PreferenceScreen>
    <PreferenceCategory android:title="@string/units_category"
        android:key="unit_title_category_key">
        <ListPreference  android:key="@string/unit_key"
            android:title="@string/units"
            android:dialogTitle="@string/select_unit"
            android:entries="@array/unit_pref_entries"
            android:entryValues="@array/unit_pref_values"
            android:defaultValue="@string/unit_default_value"/>
    </PreferenceCategory>
</PreferenceScreen>